# kiiin

./: Cargo.toml  README.md
frame/: Cargo.toml
frame/extensions/kiiin_frame/: .env  config.xml  kiiin_frame.sh  menu.json
frame/src/: main.rs
photographer/: Cargo.toml
photographer/src/: main.rs  music.rs  template.rs
photographer/template/: now_playing.html
photographer/templates/: dash.html  index.html  music.html
src/: main.rs
