[package]
name = "kiiin_photographer"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
base64 = "0.22.1"
image = "0.25.6"
infer = "0.19.0"
mpd = "0.1.0"
reqwest = { version = "0.12.22", features = ["multipart", "stream"] }
tempfile = "3.20.0"
tokio = { version = "1.47.0", features = ["full"] }
